Fixes embedded image caption - wraps instead of extending element

--- a/styleguide/source/assets/scss/01-atoms/_image.scss
+++ b/styleguide/source/assets/scss/01-atoms/_image.scss
@@ -26,3 +26,12 @@
     }
   }
 }
+//embedded image with caption - wrap caption
+figure.embed-entity--caption {
+  display: table;
+
+  figcaption {
+    display: table-caption;
+    caption-side: bottom;
+  }
+}
